--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebTest/Teleopti.Ccc.WebTest.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebTest/Teleopti.Ccc.WebTest.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Areas\MyTime\Controllers\AsmControllerTest.cs" />
     <Compile Include="Areas\MyTime\Core\Preference\DataProvider\PreferencePeriodFeedbackProviderTest.cs" />
     <Compile Include="Areas\MyTime\Core\Preference\ViewModelFactory\PreferencePeriodFeedbackViewModelFactoryTest.cs" />
+    <Compile Include="Core\Asm\ViewModelFactory\AsmViewModelFactoryTest.cs" />
     <Compile Include="Core\Common\DataProvider\PreferenceProviderTest.cs" />
     <Compile Include="Core\Portal\PortalViewModelFactoryScheduleTest.cs" />
     <Compile Include="Core\RequestContext\WebRequestPrincipalContextTest.cs" />
