--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Teleopti.Ccc.Web.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Teleopti.Ccc.Web.csproj
@@ -195,7 +195,8 @@
     <Compile Include="Areas\MobileReports\Models\Report\ReportTableRowViewModel.cs" />
     <Compile Include="Areas\MobileReports\Models\Domain\DefinedReportInformation.cs" />
     <Compile Include="Areas\MyTime\Controllers\AsmController.cs" />
-    <Compile Include="Areas\MyTime\Core\Asm\IAsmViewModelFactory.cs" />
+    <Compile Include="Areas\MyTime\Core\Asm\ViewModelFactory\AsmViewModelFactory.cs" />
+    <Compile Include="Areas\MyTime\Core\Asm\ViewModelFactory\IAsmViewModelFactory.cs" />
     <Compile Include="Areas\MyTime\Models\Asm\AsmLayer.cs" />
     <Compile Include="Areas\MyTime\Models\Asm\AsmViewModel.cs" />
     <Compile Include="Areas\MyTime\Models\Preference\PreferencePeriodFeedbackViewModel.cs" />
