Bug 17488 / 17489: Usability: Make Load Staff Employed gray if nothing is selected
--HG--
branch : Release 7.2.362

--- a/Win/Teleopti.Ccc.Win.csproj
+++ b/Win/Teleopti.Ccc.Win.csproj
@@ -266,6 +266,7 @@
     </Compile>
     <Compile Include="Budgeting\Events\BudgetGroupNeedsRefresh.cs" />
     <Compile Include="Budgeting\Events\BudgetGroupTreeNeedsRefresh.cs" />
+    <Compile Include="Budgeting\Events\GridSelectionChanged.cs" />
     <Compile Include="Budgeting\SetEfficiencyShrinkageForm.cs">
       <SubType>Form</SubType>
     </Compile>
