--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Teleopti.Ccc.Web.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Teleopti.Ccc.Web.csproj
@@ -195,8 +195,8 @@
     <Compile Include="Areas\MobileReports\Models\Report\ReportTableRowViewModel.cs" />
     <Compile Include="Areas\MobileReports\Models\Domain\DefinedReportInformation.cs" />
     <Compile Include="Areas\MyTime\Controllers\AsmController.cs" />
-    <Compile Include="Areas\MyTime\Core\Asm\Mapping\AsmViewModelMapping.cs" />
-    <Compile Include="Areas\MyTime\Core\Asm\Mapping\IAsmViewModelMapping.cs" />
+    <Compile Include="Areas\MyTime\Core\Asm\Mapping\AsmViewModelMapper.cs" />
+    <Compile Include="Areas\MyTime\Core\Asm\Mapping\IAsmViewModelMapper.cs" />
     <Compile Include="Areas\MyTime\Core\Asm\ViewModelFactory\AsmViewModelFactory.cs" />
     <Compile Include="Areas\MyTime\Core\Asm\ViewModelFactory\IAsmViewModelFactory.cs" />
     <Compile Include="Areas\MyTime\Models\Asm\AsmLayer.cs" />
