--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Teleopti.Ccc.Web.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Teleopti.Ccc.Web.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Areas\MyTime\Core\Requests\DataProvider\AbsenceRequestPersister.cs" />
     <Compile Include="Areas\MyTime\Core\Requests\DataProvider\IAbsenceRequestPersister.cs" />
     <Compile Include="Areas\Start\Models\Test\TestMessageViewModel.cs" />
+    <Compile Include="Core\IoC\ModifiedNow.cs" />
     <Compile Include="Core\RequestContext\CurrentBusinessUnitProvider.cs" />
     <Compile Include="Core\RequestContext\ICurrentBusinessUnitProvider.cs" />
     <Compile Include="Core\ServiceBus\IServiceBusSender.cs" />
