--- a/Teleopti.Messaging/Teleopti.Interfaces/Teleopti.Interfaces.csproj
+++ b/Teleopti.Messaging/Teleopti.Interfaces/Teleopti.Interfaces.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Domain\IJobResultDetail.cs" />
     <Compile Include="Domain\IProjectionProvider.cs" />
     <Compile Include="Domain\IProvideCustomChangeInfo.cs" />
+    <Compile Include="Domain\IRelativeDailyDifferencesByAllSkillsExtractor.cs" />
     <Compile Include="Domain\IResourceCalculateDelayer.cs" />
     <Compile Include="Domain\IRevision.cs" />
     <Compile Include="Domain\IRuleSetProjectionService.cs" />
